--- a/packr/linux-x64-config.json
+++ b/packr/linux-x64-config.json
@@ -1,6 +1,6 @@
 {
     "classPath": [
-        "OpenRune.jar"
+        "Illerai.jar"
     ],
     "mainClass": "net.runelite.launcher.Launcher",
     "vmArgs": [
