--- a/pom.xml
+++ b/pom.xml
@@ -30,8 +30,8 @@
 	<groupId>net.runelite</groupId>
 	<artifactId>launcher</artifactId>
 	<version>1.0</version>
-	<name>OpenRune Launcher</name>
-	<description>Launcher for OpenRune client</description>
+	<name>Illerai Launcher</name>
+	<description>Launcher for Illerai client</description>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -152,7 +152,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>OpenRune</finalName>
+		<finalName>Illerai</finalName>
 
 
 		<plugins>
