--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -17,7 +17,7 @@ jobs:
           key: ${{ runner.os }}-cache-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-cache-
-      - run: choco install innosetup --version 6.3.3
+      - run: choco install innosetup --version 6.3.3 --force
       - name: Set up JDK 11
         uses: actions/setup-java@v4
         with:
@@ -110,7 +110,7 @@ jobs:
             Illerai-aarch64.AppImage
           if-no-files-found: error
   macos:
-    runs-on: macos-12
+    runs-on: macos-15
     steps:
       - uses: actions/setup-python@v4
         with:
